# trustid_image_processing_win

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
depends/dlib/dlib/dir_nav/: dir_nav_kernel_2.h
examples/: build_simple_face_verifier.cc  build_simple_face_verifier_webcam.cc  detect_and_verify_faces.cc  serialization_test.cc  shape_pred_example.cc
includes/trustid_image_processing/: face_detector.h  face_normalization.h  face_verificator.h  serialize.h  utils.h
includes/trustid_image_processing/client/: client_processor.h
includes/trustid_image_processing/dlib_impl/: face_detector.h  face_verificator.h
includes/trustid_image_processing/server/: server_processor.h
src/trustid_image_processing/: face_detector.cc  face_verificator.cc  serialize.cc  utils.cc
src/trustid_image_processing/client/: client_processor.cc
src/trustid_image_processing/dlib_impl/: face_detector.cc  face_verificator.cc
src/trustid_image_processing/server/: server_processor.cc
tests/: utils.cc
tests/dlib_impl/: face_detector_eval.cpp
